# dakara-base

./: .appveyor.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  appveyor.yml  bump_version.sh  create_archive.sh  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
dakara_base/: config.py  http_client.py  resources_manager.py  websocket_client.py
dakara_base/tests/: test_config.py  test_http_client.py  test_resources_manager.py  test_safe_workers.py  test_utils.py  test_websocket_client.py
hooks/pre-commit.d/: 01_tests
src/dakara_base/: __init__.py  config.py  directory.py  exceptions.py  http_client.py  progress_bar.py  resources_manager.py  safe_workers.py  utils.py  version.py  websocket_client.py
tests/: test_config.py  test_directory.py  test_exceptions.py  test_http_client.py  test_progress_bar.py  test_resources_manager.py  test_safe_workers.py  test_utils.py  test_websocket_client.py
