[project]
name = "dakarabase"
authors = [
        {name = "Flore", email = "flore.love@gmail.com"},
        {name = "Neraste", email = "neraste.herr10@gmail.com"},
]
description = "Collection of helper modules for the Dakara Project"
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
requires-python = ">= 3.7"
classifiers = [
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Operating System :: OS Independent",
        "Environment :: Console",
        "Intended Audience :: Developers",
]
dependencies = [
        "coloredlogs>=15.0.1,<15.1.0",
        "environs>=9.5.0,<9.6.0",
        "furl>=2.1.3,<2.2.0",
        "path>=16.4.0,<16.5.0",
        "platformdirs>=2.5.2,<2.6.0",
        "progressbar2>=4.0.0,<4.1.0",
        "PyYAML>=6.0,<6.1",
        "requests>=2.27.1,<2.28.0",
        "websocket-client>=1.3.1,<1.4.0",
]

[project.optional-dependencies]
dev = [
        "black>=22.3.0,<22.4.0",
        "codecov>=2.1.12,<2.2.0",
        "isort>=5.10.1,<5.11.0",
        "pdoc>=10.0.4,<10.1.0",
        "pre-commit>=2.17.0,<2.18.0",
        "pytest-cov>=3.0.0,<3.1.0",
        "pytest>=7.1.1,<7.2.0",
]

[project.urls]
Homepage = "https://github.com/DakaraProject/dakara-base"
Repository = "https://github.com/DakaraProject/dakara-base.git"
Issues = "https://github.com/DakaraProject/dakara-base/issues"
Changelog = "https://github.com/DakaraProject/dakara-base/blob/master/CHANGELOG.md"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "dakara_base.version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest]
addopts = "--cov=dakara_base"

[tool.isort]
profile = "black"
