[metadata]
name = dakarabase
version = attr: dakara_base.version.__version__
author = Flore, Neraste
author_email = flore.love at gmail.com, neraste.herr10 at gmail.com
description = Collecion of helper modules for the Dakara Project
long_description = file: README.md, LICENSE
license = MIT
url = https://github.com/DakaraProject/dakara-base
project_urls =
        Bug tracker=https://github.com/DakaraProject/dakara-base/issues
classifiers =
        Programming Language :: Python
        License :: OSI Approved :: MIT License
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.5
        Programming Language :: Python :: 3.6

[options]
package_dir =
        =src
packages = find:
install_requires =
        PyYAML<5.2
        coloredlogs<10.1
        furl<2.1
        path.py<12.1
        requests<2.23
        websocket-client<0.57
include_package_data = true

[options.extras_require]
tests =
        black; python_version >= '3.6'
        flake8
        coverage

[options.packages.find]
where = src

[flake8]
max-line-length = 88
ignore = E203, W503

[coverage:run]
source = src
